Fixed scrollbar with overflow:auto and changed order

--- a/src/components/styles/Projects.css
+++ b/src/components/styles/Projects.css
@@ -12,7 +12,7 @@
 
 #projects-list {
   max-height: 300px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 
